fix axis title spacing

--- a/src/irb-app/irb-result/chart-display/bar-chart/bar-chart-header/index.styl
+++ b/src/irb-app/irb-result/chart-display/bar-chart/bar-chart-header/index.styl
@@ -84,22 +84,25 @@ irb-bar-chart-header
       margin-left auto
 
   .bar-chart-axis
-    justify-content flex-end
+    justify-content center
 
     .axis-title
       display flex
       justify-content center
-      width 50%
 
       .text
         text-align center
         margin-left 36px
 
+      .sort-icon
+        width 36px
+
     .max-value
       color mp-blue
       display flex
       justify-content flex-end
-      width 25%
+      position absolute
+      right 0
 
       .text
         border-bottom 1px dotted mp-blue
